package br.com.nba.entities;

import jakarta.persistence.*;

@Entity(name = "PLAYER_STATISTICS")
@Table(name = "PLAYER_STATISTICS")
public class PlayerStatistics {

    @Id
    @Column(name = "id", nullable = false, unique = true, updatable = false)
    private String id;

    @Column(name = "points")
    private Integer points;

    @Column(name = "rebounds")
    private Integer rebounds;

    @Column(name = "blocks")
    private Integer blocks;

    @Column(name = "assistances")
    private Integer assistances;

    @Column(name = "steals")
    private Integer steals;

    @Column(name = "three_point_shots")
    private Integer threePointShots;

    @Column(name = "perimeter_baskets")
    private Integer perimeterBaskets;

    @Column(name = "free_throws")
    private Integer freeThrows;

    @ManyToOne(fetch = FetchType.EAGER, cascade = CascadeType.ALL)
    @JoinColumn(name = "player_id", referencedColumnName = "id", foreignKey = @ForeignKey(name = "player_statistics_playerfk"))
    private Player player;

    @ManyToOne(fetch = FetchType.EAGER, cascade = CascadeType.ALL)
    @JoinColumn(name = "game_id", referencedColumnName = "id", foreignKey = @ForeignKey(name = "player_statistics_gamefk"))
    private Game game;
}
