@startuml
left to right direction
skinparam nodesep 200
skinparam ranksep 300
skinparam linetype ortho

class Player {
    - id: String
    - birthDate: Date
    - nickname: String
    - shirtNumber: Integer
    - weight: Double
    - height: Integer
    - name: String
    - position: String
    - age: Integer

    + Player(): Player
    + getters(): Type
    + setters(Type): void
    + toString(): String
    + hashCode(): int
    + equals(Object): boolean
}

class Team {
    - id: String
    - state: String
    - fullName: String
    - abbreviation: String
    - yearFounded: Date
    - city: String

    + Team(): Team
    + getters(): Type
    + setters(Type): void
    + toString(): String
    + hashCode(): int
    + equals(Object): boolean
}

class Game {
    - id: String
    - matchup: String

    + Game(): Game
    + getters(): Type
    + setters(Type): void
    + toString(): String
    + hashCode(): int
    + equals(Object): boolean
}

class Season {
    - id: String
    - year: Date

    + Season(): Season
    + getters(): Type
    + setters(Type): void
    + toString(): String
    + hashCode(): int
    + equals(Object): boolean
}

class PlayerStatistics {
    - id: String
    - steals: Integer
    - blocks: Integer
    - points: Integer
    - assistances: Integer
    - threePointShots: Integer
    - rebounds: Integer
    - perimeterBaskets: Integer
    - freeThrows: Integer

    + PlayerStatistics(): PlayerStatistics
    + getters(): Type
    + setters(Type): void
    + toString(): String
    + hashCode(): int
    + equals(Object): boolean
}

class TeamStatistics {
    - id: String
    - steals: Integer
    - wl: String
    - blocks: Integer
    - points: Integer
    - threePointShots: Integer
    - rebounds: Integer
    - perimeterBaskets: Integer
    - freeThrows: Integer

    + TeamStatistics(): TeamStatistics
    + getters(): Type
    + setters(Type): void
    + toString(): String
    + hashCode(): int
    + equals(Object): boolean
}

Player "N" o-- "N" Season : Jogou_em
Team "N" o-- "N" Season : Participou_de
Player "N" --* Team : Pertence_a
Game "1" *-- "1" Season : Ocorreu_em
Game "1" *-- "1" Team : Time_Mandante
Game "1" *-- "1" Team : Time_Visitante
Game "1" -- "1" Team : Vencedor
PlayerStatistics "N" *-- "1" Game : Estatísticas_do_Jogador
PlayerStatistics "N" *-- "1" Player : Estatísticas_de
TeamStatistics "N" *-- "1" Game : Estatísticas_do_Time
TeamStatistics "N" *-- "1" Team : Estatísticas_de
@enduml
